kubernetes/components/tailscale/ingress.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/traefik.io/ingressroute_v1alpha1.json
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ${APP}-tailscale
  annotations:
    reloader.stakater.com/auto: "true"
    external-dns.alpha.kubernetes.io/target: "${INTERNAL_DOMAIN}"
    kubernetes.io/ingress.class: internal
    tailscale.com/experimental-forward-cluster-traffic-via-ingress: "true"
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`${TAILSCALE_HOST:=${APP}}.${TAILSCALE_DOMAIN}`)
    kind: Rule
    services:
    - name: ${TAILSCALE_SERVICE:=${APP}}
      port: ${TAILSCALE_PORT:=http}
      passHostHeader: true
    middlewares:
    - name: tailscale-network
      namespace: network
